<resources>
    <string name="app_name">PhotoFullStack</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_button">Sign in</string>
    <string name="backend_ip">Server IP</string>
    <string name="backend_port">Server port</string>
    <string name="status_logging_in">Signing in...</string>
    <string name="status_malformed_url">Server address invalid</string>
    <string name="status_malformed_credentials">Invalid username/password</string>
    <string name="status_incomplete_input">All input fields are required</string>
    <string name="status_login_successful">Login successful</string>
    <string name="register_button">Register</string>
    <string name="status_register_successful">Registration successful</string>
    <string name="status_username_taken">Username already taken</string>
    <string name="status_internal_error">Internal error</string>
    <string name="upload_button">Upload photo</string>
    <string name="action_button_gallery">Pick photo from gallery</string>
    <string name="action_button_camera">Take a photo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="action_button_upload">Upload</string>
    <string name="upload_success">Upload successful</string>
    <string name="upload_failure">Upload failed</string>
</resources>
