<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.oskareriksson.photofullstack.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="325dp"
        android:layout_height="320dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/backend_ip_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_button"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/backend_ip"
            android:inputType="textUri"
            app:layout_constraintBottom_toTopOf="@+id/username_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/backend_port_input"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/backend_port_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/backend_port"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/backend_ip_input"
            app:layout_constraintLeft_toRightOf="@+id/backend_ip_input"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_below="@+id/backend_ip_input"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/username_input"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/password_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backend_ip_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_alignEnd="@+id/username_input"
            android:layout_alignRight="@+id/username_input"
            android:layout_below="@+id/username_input"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:onClick="login"
            android:text="@string/login_button"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="register"
            android:text="@string/register_button"
            app:layout_constraintBottom_toTopOf="@+id/status_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
